# BlackMagic

./: .BlackMagic.cabal.swp  .README.md.swp  .Setup.hs.swp  .gitignore  BlackMagic.cabal  LICENSE  README.md  Setup.hs
.stack-work/install/x86_64-osx/lts-6.10/7.10.3/lib/x86_64-osx-ghc-7.10.3/BlackMagic-0.1.0.0-5wLmdDMccf24H4NCej5G0q/: BlackMagic.dyn_hi  BlackMagic.hi  libHSBlackMagic-0.1.0.0-5wLmdDMccf24H4NCej5G0q-ghc7.10.3.dylib
.stack-work/install/x86_64-osx/lts-6.10/7.10.3/pkgdb/: BlackMagic-0.1.0.0-c752831d8f76bb02e08601f0f154669d.conf  package.cache
minisat/: .Main.cpp.swp  .Solver.cpp.swp  Main.cpp  Solver.cpp  libminisat.dylib  minisat.js
src/: .BlackMagic.hs.swp  BlackMagic.hs
