name:                BlackMagic
version:             0.1.0.0
synopsis:            makes sure ghc(i) knows about minisat
description:         Please see README.md
homepage:            https://github.com/JakeEhrlich/BlackMagic#readme
license:             BSD3
license-file:        LICENSE
author:              Jake Ehrlich
maintainer:          jake.h.ehrlich@gmail.com
copyright:           2016 Jake Ehrlich
category:            Algorithms
build-type:          Simple
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     BlackMagic
  ghc-options: -Lminisat/ -lminisat
  build-depends:       base >= 4.7 && < 5
  default-language:    Haskell2010

test-suite BlackMagic-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , BlackMagic
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/JakeEhrlich/BlackMagic
